# B-luga

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  test-ecs.yml
include/: ECSTests.hpp
include/B-luga/: Json.hpp  Logger.hpp  SceneManager.hpp
include/B-luga/Plugins/Systems/: ECSCustomTypes.hpp  ECSSystems.hpp
include/B-luga/SystemManagers/: CMakeLists.txt  SystemManagersDirector.hpp
include/Folder/: Test.hpp
libs/B-luga/: CMakeLists.txt  README.md
libs/B-luga-graphics/: CMakeLists.txt  README.md
libs/B-luga-graphics/include/: CMakeLists.txt
libs/B-luga-graphics/include/B-luga-graphics/: AnimRect.hpp  AudioSystems.hpp  GraphicsCustomTypes.hpp  GraphicsSystems.hpp  ParallaxSystems.hpp  SharedValues.hpp  SpriteSystems.hpp  TextSystems.hpp
libs/B-luga-graphics/include/B-luga-graphics/Raylib/: CMakeLists.txt  Raylib.hpp  UnloadRaylib.cpp  UnloadRaylib.hpp
libs/B-luga-graphics/include/B-luga-graphics/Raylib/Audio/: Audio.cpp  Audio.hpp
libs/B-luga-graphics/include/B-luga-graphics/Raylib/Events/: Inputs.cpp  Inputs.hpp
libs/B-luga-graphics/include/B-luga-graphics/Raylib/Geometry/: Geometry.cpp  Geometry.hpp
libs/B-luga-graphics/include/B-luga-graphics/Raylib/Graphics/: Graphics.cpp  Graphics.hpp
libs/B-luga-graphics/scripts/: create-tar.sh  test.sh
libs/B-luga-graphics/src/: CMakeLists.txt  test.cpp
libs/B-luga-graphics/src/RaylibImpl/: CMakeLists.txt
libs/B-luga-graphics/src/RaylibImpl/Audio/: Audio.cpp  Audio.hpp
libs/B-luga-graphics/src/RaylibImpl/Graphics/: Graphics.cpp  Graphics.hpp
libs/B-luga-graphics/test/: CMakeLists.txt  main.cpp
libs/B-luga-physics/: CMakeLists.txt  README.md
libs/B-luga-physics/include/B-luga-physics/: ECSCustomTypes.hpp  ECSSystems.hpp
libs/B-luga-physics/scripts/: create-tar.sh  test.ps1  test.sh
libs/B-luga-physics/src/: test.cpp
libs/B-luga-physics/test/: CMakeLists.txt  main.cpp
libs/B-luga-steam/b-luga-steam/: CMakeLists.txt
libs/B-luga-steam/b-luga-steam/include/B-luga-steam/: CMakeLists.txt
libs/B-luga-steam/include/: CMakeLists.txt
libs/B-luga-steam/scripts/: create-tar.sh  test.sh
libs/B-luga-steam/src/: CMakeLists.txt  test.cpp
libs/B-luga-steam/test/: CMakeLists.txt
libs/B-luga/Documentation/: Clock.md  Json.md  Registry.md  SceneManager.md  SparseArray.md  Systems.md
libs/B-luga/include/B-luga/: IPlugin.hpp  Json.hpp  Logger.hpp  PathResolver.hpp  PluginHandler.hpp  Registry.hpp  SceneManager.hpp
libs/B-luga/include/B-luga/Maths/: Maths.hpp
libs/B-luga/include/B-luga/SystemManagers/: SystemManager.hpp  SystemManagersDirector.hpp
libs/B-luga/scripts/: create-tar.sh
libs/B-luga/src/: Logger.cpp
libs/B-luga/test/: CMakeLists.txt
scripts/: cleanup.sh  create-tar.sh  generate-all.sh  test-all.ps1  test-all.sh
test/: CMakeLists.txt
test/scripts/: compil.ps1  compil.sh
test/src/: CMakeLists.txt  main.cpp
